another bug squashed

--- a/redoing the statick page for earth 2.0/index.css
+++ b/redoing the statick page for earth 2.0/index.css
@@ -59,6 +59,7 @@ body {
 .p_1text{
     color: rgb(255, 255, 255);
     font-family: 'Nova Flat', cursive;
+    width: 800.2px;
     font-size: 20px;
     background-color: rgba(0, 0, 0, 0.267)
 }
